<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TextViewMin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".view.fragments.MovieDetailsFragment">

    <TextView
        android:id="@+id/lbl_genre_fragment"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="@string/genre"
        android:textColor="@color/Gold"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/backdrop_details_fragment"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/lbl_duration_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/duration"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lbl_releasedate_fragment"
        app:layout_constraintStart_toStartOf="@+id/lbl_releasedate_fragment"
        app:layout_constraintTop_toBottomOf="@+id/lbl_releasedate_fragment" />

    <TextView
        android:id="@+id/lbl_rating_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/rating"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lbl_releasedate_fragment"
        app:layout_constraintStart_toStartOf="@+id/lbl_duration_fragment"
        app:layout_constraintTop_toBottomOf="@+id/lbl_duration_fragment" />

    <TextView
        android:id="@+id/lbl_popularity_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/popularity"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/lbl_rating_fragment" />

    <TextView
        android:id="@+id/lbl_vote_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/vote_count"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_rating_fragment" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="Genre :"
        android:textColor="@color/Gold"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_details_fragment"
        app:layout_constraintTop_toBottomOf="@+id/backdrop_details_fragment" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="Duration"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="Rating"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Popularity"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Vote"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_vote_fragment"
        app:layout_constraintEnd_toStartOf="@+id/lbl_vote_fragment"
        app:layout_constraintTop_toBottomOf="@+id/lbl_rating_fragment" />

    <TextView
        android:id="@+id/lbl_releasedate_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/releasedate"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/lbl_desc_fragment"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Release Date"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_desc_fragment" />

    <TextView
        android:id="@+id/lbl_title_fragment"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:text="@string/Title"
        android:textColor="@color/Gold"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_details_fragment" />

    <TextView
        android:id="@+id/lbl_desc_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/overview"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_tagline_fragment" />

    <ImageView
        android:id="@+id/backdrop_details_fragment"
        android:layout_width="390dp"
        android:layout_height="188dp"
        android:layout_marginTop="8dp"
        android:src="@android:drawable/ic_menu_report_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_details_fragment"
        android:layout_width="96dp"
        android:layout_height="129dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/img"
        android:src="@android:drawable/ic_menu_report_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_tagline_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tagline"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_title_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>