<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons_movie_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".view.activities.MovieDetailsActivity">

    <TextView
        android:id="@+id/lbl_original_title_details"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/OriginalTitle"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/OriginalTitle"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteY="432dp" />

    <TextView
        android:id="@+id/lbl_movie_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/movie_id"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lbl_original_title_details"
        app:layout_constraintStart_toStartOf="@+id/lbl_original_title_details"
        app:layout_constraintTop_toBottomOf="@+id/lbl_original_title_details"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/lbl_original_language_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/OriginalLang"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="538dp" />

    <TextView
        android:id="@+id/OriginalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Original Title"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_original_title_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbl_original_title_details" />

    <TextView
        android:id="@+id/movie_ID"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Movie ID"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OriginalTitle" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:text="Language"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="538dp" />

    <TextView
        android:id="@+id/popularity"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:text="Popularity"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/popularity_details" />

    <ImageView
        android:id="@+id/img_poster_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <TextView
        android:id="@+id/popularity_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/popularity"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/lbl_original_language_details"
        app:layout_constraintStart_toStartOf="@+id/lbl_original_language_details"
        app:layout_constraintTop_toBottomOf="@+id/lbl_original_language_details" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Vote Average"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popularity_details" />

    <TextView
        android:id="@+id/vote_avg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/vote_average"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/popularity_details"
        app:layout_constraintStart_toStartOf="@+id/popularity_details"
        app:layout_constraintTop_toBottomOf="@+id/popularity_details" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Vote Count"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vote_avg" />

    <TextView
        android:id="@+id/vote_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/voteCount"
        android:textColor="@color/Gold"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/vote_avg"
        app:layout_constraintStart_toStartOf="@+id/vote_avg"
        app:layout_constraintTop_toBottomOf="@+id/vote_avg" />

</androidx.constraintlayout.widget.ConstraintLayout>